# Astro-TSP

./: README.md  pyproject.toml
config/: benchmark.json
data/cache/: 10210_2026-04-21T00:00:00.json  1026_2026-04-21T00:00:00.json  10696_2026-04-21T00:00:00.json  10_2026-04-21T00:00:00.json  11007_2026-04-21T00:00:00.json  11176_2026-04-21T00:00:00.json  11573_2026-04-21T00:00:00.json  11631_2026-04-21T00:00:00.json  12101_2026-04-21T00:00:00.json  1221_2026-04-21T00:00:00.json  12332_2026-04-21T00:00:00.json  12456_2026-04-21T00:00:00.json  12493_2026-04-21T00:00:00.json  12593_2026-04-21T00:00:00.json  12666_2026-04-21T00:00:00.json  12686_2026-04-21T00:00:00.json  12717_2026-04-21T00:00:00.json  12945_2026-04-21T00:00:00.json  12990_2026-04-21T00:00:00.json  13327_2026-04-21T00:00:00.json  13393_2026-04-21T00:00:00.json  13676_2026-04-21T00:00:00.json  13835_2026-04-21T00:00:00.json  13908_2026-04-21T00:00:00.json  13982_2026-04-21T00:00:00.json  14017_2026-04-21T00:00:00.json  14072_2026-04-21T00:00:00.json  14117_2026-04-21T00:00:00.json  14288_2026-04-21T00:00:00.json  14306_2026-04-21T00:00:00.json  14359_2026-04-21T00:00:00.json  14509_2026-04-21T00:00:00.json  14603_2026-04-21T00:00:00.json  (+365 more)
results/: benchmark_raw.csv  benchmark_raw_6810.csv  benchmark_summary.csv  benchmark_summary_6810.csv  instances_catalog.csv  summary.txt  summary_6810.txt
results_smoke/: benchmark_raw.csv  benchmark_summary.csv  summary.txt
tests/: test_benchmark_integration.py  test_costs.py  test_instance_generator.py  test_runner_metrics.py  test_solvers.py
(+22 files in other folders)
