[project]
name = "astro-tsp"
version = "0.1.0"
description = "Benchmarking TSP solvers on real astronomical coordinates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "astroquery",
  "numpy",
  "pandas",
  "matplotlib",
  "pulp",
]
[project.scripts]
run-benchmark = "astrotsp.cli:main"
generate-plots = "astrotsp.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
